// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <div
    class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
  >
    <div
      class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
    >
      <div
        class="TDS_flexboxgrid2__col-xs___2KrHO TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__gutterless___11Fxy"
      >
        <label
          for="the-select"
        >
          <span
            class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz"
          >
            <span
              class="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__boldFont___2MqlI TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__color___1Jt_W"
            >
              The select
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="wrapper"
  >
    <select
      aria-invalid="false"
      class="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T TDS_FormField-modules__default___3LtXb TDS_FormField-modules__formField___29WmQ TDS_Borders-modules__thin___1JHOl TDS_Borders-modules__rounded___3df1Q TDS_Forms-modules__font___g7OGX TDS_FormField-modules__medium___1FfhV TDS_FormField-modules__wordBreak___11lNB TDS_FormField-modules__mediumFont___2AbN7 TDS_FormField-modules__color___3x5Uc TDS_FormField-modules__defaultBgColor___NByyE TDS_FormField-modules__defaultBoxShadow___21E8t select withoutFeedbackIcon"
      id="the-select"
    >
      <option
        value="value-1"
      >
        text one
      </option>
      <option
        value="value-2"
      >
        text two
      </option>
    </select>
    <div
      class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz iconsPosition"
    >
      <div
        class="fixLineHeight"
      >
        <i
          aria-hidden="true"
          class="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__primary___2UY-N TDS_Icon-modules__size16___1pm12"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with a feedback state and icon 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <div
    class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
  >
    <div
      class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
    >
      <div
        class="TDS_flexboxgrid2__col-xs___2KrHO TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__gutterless___11Fxy"
      >
        <label
          for="the-select"
        >
          <span
            class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz"
          >
            <span
              class="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__boldFont___2MqlI TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__color___1Jt_W"
            >
              The select
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="wrapper"
  >
    <select
      aria-invalid="true"
      class="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T TDS_FormField-modules__error___2pMXQ TDS_FormField-modules__formField___29WmQ TDS_Borders-modules__thin___1JHOl TDS_Borders-modules__rounded___3df1Q TDS_Forms-modules__font___g7OGX TDS_FormField-modules__medium___1FfhV TDS_FormField-modules__wordBreak___11lNB TDS_FormField-modules__mediumFont___2AbN7 TDS_FormField-modules__color___3x5Uc TDS_FormField-modules__defaultBgColor___NByyE TDS_FormField-modules__defaultBoxShadow___21E8t select withFeedbackIcon"
      id="the-select"
    >
      <option
        value="value-1"
      >
        text one
      </option>
      <option
        value="value-2"
      >
        text two
      </option>
    </select>
    <div
      class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz iconsPosition"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="TDS_IconWrapper-modules__fixLineHeight___3tqIl"
        >
          <i
            aria-label="The value of this input field is invalid."
            class="TDS_Icon-modules__iconExclamationPointCircle___1HgRN TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
          />
        </div>
      </div>
      <div
        class="fixLineHeight"
      >
        <i
          aria-hidden="true"
          class="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
        />
      </div>
    </div>
  </div>
</div>
`;
